--- a/style.css
+++ b/style.css
@@ -100,3 +100,47 @@ tr.even {
 tr:hover {
 	background-color: #ff8e3c15;
 }
+
+
+
+.popup {
+	background: hsla(0, 0%, 30%, 0.5);
+	position: fixed;
+	height: 100vh;
+	width: 100vw;
+	transition: all 0.25s;
+	top: 0;
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	pointer-events: none;
+	opacity: 0;
+}
+
+.popup fieldset {
+	background: grey;
+	padding: 2rem;
+	border: 3px solid pink;
+	background-color: #ccc;
+	border-radius: 5px;
+transition: all 0.2s;
+}
+
+.popup.open {
+	opacity: 1;
+	pointer-events: all;
+}
+
+.popup button {
+	background-color: #4CAF50;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	opacity: 0.9;
+}
+.popup button:hover {
+	background-color: red;
+}
